# python-taxes

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  coverage.json  pyproject.toml
.github/workflows/: check.yml  checks.yml  coverage.yml  deploy-pages.yml  deploy.yml  publish-pypi.yml  release.yml  run.yml  test.yml  tests.yml
src/python_taxes/: __init__.py  __main__.py  cli.py
src/python_taxes/federal/: __init__.py  medicare.py  social_security.py
src/python_taxes/federal/calculators/: __init__.py  medicare.py  social_security.py
src/python_taxes/federal/income/: __init__.py
src/python_taxes/federal/income/payroll/: automated.py
src/python_taxes/federal/income/tables/percentage/: __init__.py
src/python_taxes/federal/income/tables/percentage/automated/: hoh.py  married.py  single.py
src/python_taxes/federal/income_brackets/percentage/: __init__.py
src/python_taxes/federal/income_brackets/percentage/auto_payroll/: hoh.py  married.py  single.py
tests/: cli_test.py
tests/2024/: cli_test.py
tests/2024/federal/: income_test.py
tests/federal/: income_test.py  medicare_test.py  social_security_test.py
